<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="pref_name">Preferred Name</string>
    <string name="street_address">Street Address</string>
    <string name="birthday">Birthday</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

</resources>
