<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStudentInfo"
            android:text="STUDENT INFO ..."
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp" />
        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPersonName"
            android:id="@+id/editTextFirstName"
            android:layout_width="150dp"
            android:hint="@string/first_name"
            android:layout_below="@id/textViewStudentInfo"/>

        <EditText
            android:inputType="textPersonName"
            android:layout_width="150dp"
            android:id="@+id/editTextLastName"
            android:hint="@string/last_name"

            android:layout_below="@id/textViewStudentInfo"
            android:layout_toRightOf="@id/editTextFirstName"
            style="@style/EditTextStyle" />
        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPersonName"
            android:id="@+id/editTextPrefName"
            android:hint="@string/pref_name"
            android:layout_below="@id/editTextFirstName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"
            android:inputType="date"
            android:id="@+id/editTextBirthday"
            android:hint="@string/birthday"
            android:layout_below="@id/editTextPrefName"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextBirthday"
            android:id="@+id/relativeLayoutAddressInfo">
        <!-- android:background="@drawable/rounded_corners_screen"> -->

            <EditText
                android:layout_width="fill_parent"
                android:inputType="textPostalAddress"
                android:id="@+id/editTextStreetAddress"
                android:hint="@string/street_address"
                style="@style/EditTextStyle" />

            <EditText
                android:layout_width="175dp"
                android:inputType="textPostalAddress"
                android:id="@+id/editTextCity"
                android:hint="City"
                android:layout_below="@+id/editTextStreetAddress"
                style="@style/EditTextStyle"
           />

            <EditText
                android:inputType="textPostalAddress"
                android:layout_width="40dp"
                android:id="@+id/editTextState"
                android:hint="State"
                style="@style/EditTextStyle"
                android:layout_below="@+id/editTextStreetAddress"
                android:layout_toRightOf="@id/editTextCity"/>

            <EditText
                android:inputType="textPostalAddress"
                android:layout_width="100dp"
                android:id="@+id/editTextZip"
                android:hint="Zip Code"
                android:layout_toRightOf="@+id/editTextState"
                android:layout_below="@+id/editTextStreetAddress"

                style="@style/EditTextStyle" />

            <EditText
                android:inputType="textPhonetic"
                android:id="@+id/editTextPhone"
                android:hint="Contact Phone Number"
                android:layout_below="@+id/editTextCity"

                style="@style/EditTextStyle" />


        </RelativeLayout>

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/editTextParentNames"
            android:hint="Parent Names"
            android:layout_below="@+id/relativeLayoutAddressInfo"

            style="@style/EditTextStyle" />

        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editTextParentPhone"
            android:hint="Parent Phone Number"
            android:layout_below="@+id/editTextParentNames"
            android:background="@drawable/rounded_corners"

            style="@style/EditTextStyle" />
        <EditText
            android:inputType="textEmailAddress"
            android:layout_below="@+id/editTextParentPhone"
            android:id="@+id/editTextEmail"
            android:hint="Parent Email Address"


            style="@style/EditTextStyle" />



    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:id="@+id/buttonSave"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/buttonCancel"
            android:layout_gravity="right"
            android:clickable="true"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

